res/css/views/toasts/_IncomingCallToast.scss
/*
Copyright 2020 The Matrix.org Foundation C.I.C.
Copyright 2021 Šimon Brandner <simon.bra.ag@gmail.com>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

.mx_IncomingCallToast {
    // mx_Toast overrides
    padding: 8px !important;
    display: flex !important;
    top: 8px !important;
    border-radius: 8px;

    flex-direction: row;
    gap: 8px;
    min-width: 250px;
    box-shadow: 0px 14px 24px rgba(0, 0, 0, 0.08);
    background-color: $voipcall-plinth-color; // To match mx_Toast

    pointer-events: initial; // restore pointer events so the user can accept/decline

    .mx_IncomingCallToast_content {
        display: flex;
        flex-direction: column;

        h1, .mx_CallEvent_type {
            margin: 0px;
            padding: 0px;
            font-size: $font-14px;
            line-height: $font-16px;
        }

        h1 {
            font-weight: bold;
        }

        .mx_CallEvent_type {
            display: flex;
            flex-direction: row;

            .mx_CallEvent_type_icon {
                height: 16px;
                width: 16px;
                margin-right: 6px;

                &::before {
                    content: '';
                    position: absolute;
                    height: inherit;
                    width: inherit;
                    background-color: $tertiary-fg-color;
                    mask-repeat: no-repeat;
                    mask-size: contain;
                }
            }
        }

        &.mx_IncomingCallToast_content_voice {
            .mx_CallEvent_type .mx_CallEvent_type_icon::before,
            .mx_IncomingCallToast_buttons .mx_IncomingCallToast_button_accept span::before {
                mask-image: url('$(res)/img/element-icons/call/voice-call.svg');
            }
        }

        &.mx_IncomingCallToast_content_video {
            .mx_CallEvent_type .mx_CallEvent_type_icon::before,
            .mx_IncomingCallToast_buttons .mx_IncomingCallToast_button_accept span::before {
                mask-image: url('$(res)/img/element-icons/call/video-call.svg');
            }
        }

        .mx_IncomingCallToast_buttons {
            margin-top: 8px;
            display: flex;
            flex-direction: row;
            gap: 12px;

            .mx_IncomingCallToast_button {
                height: 24px;
                padding: 0px 12px;
                flex-shrink: 0;
                flex-grow: 1;
                margin-right: 0;
                font-size: $font-15px;
                line-height: $font-24px;

                span {
                    padding: 8px 0;
                    display: flex;
                    align-items: center;

                    &::before {
                        content: '';
                        display: inline-block;
                        background-color: $button-fg-color;
                        mask-position: center;
                        mask-repeat: no-repeat;
                        mask-size: 16px;
                        width: 16px;
                        height: 16px;
                        margin-right: 8px;
                    }
                }

                &.mx_IncomingCallToast_button_decline span::before {
                    mask-image: url('$(res)/img/element-icons/call/hangup.svg');
                }
            }
        }
    }

    .mx_IncomingCallToast_iconButton {
        display: flex;
        height: 20px;
        width: 20px;

        &::before {
            content: '';

            height: inherit;
            width: inherit;
            background-color: $tertiary-fg-color;
            mask-repeat: no-repeat;
            mask-size: contain;
            mask-position: center;
        }
    }

    .mx_IncomingCallToast_silence::before {
        mask-image: url('$(res)/img/voip/silence.svg');
    }

    .mx_IncomingCallToast_unSilence::before {
        mask-image: url('$(res)/img/voip/un-silence.svg');
    }
}

